--- a/html/index.html
+++ b/html/index.html
@@ -11,25 +11,49 @@
 	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-		<script src="js/scripts.js"></script>	
+		<script src="../js/scripts.js"></script>	
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/animate.css">    
-		<link rel="stylesheet" href="css/hover.css">    	
-	    <link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="../css/animate.css">    
+		<link rel="stylesheet" href="../css/hover.css">    	
+	    <link rel="stylesheet" href="../css/styles.css">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Gem Stop</a>
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="index.html">Rock Stop</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   			</button>
   			<div class="collapse navbar-collapse" id="navbarSupportedContent">
   				<ul class="navbar-nav mr-auto">
-					<li c-lass="nav-item active">
-						<a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="product.html">Product</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="team.html">Team</a>
 					</li>
   				</ul>
   			</div>
 		</nav>
+		<div id="home-landing-image" class="parallax">
+			<div class="landing-content-container">
+				<a href="product.html"><button id="landing-button" type="button" class="btn btn-success">Check out our rocks</button></a>
+			</div>
+		</div>
+		<div id="home-divider-one" class="parallax-divider">
+			<h3 class="divider-text">We make sure to have the finest rocks in the world.</h3>
+		</div>
+		<div id="home-image-one" class="parallax">
+		</div>
+		<div id="home-divider-two" class="parallax-divider">
+			<h3 class="divider-text">Our Rocks are made from 100% real rock.</h3>
+		</div>
+		<div id="home-image-two" class="parallax">
+		</div>
+		<div id="home-divider-three" class="parallax-divider">
+			<h3 class="divider-text">We want you to be a part of this magical rock journey.</h3>
+		</div>
 	</body>
 </html>
