--- a/html/product.html
+++ b/html/product.html
@@ -19,14 +19,14 @@
 	</head>
 	<body>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="index.html">Rock Stop</a>
+			<a class="navbar-brand" href="../index.html">Rock Stop</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   			</button>
   			<div class="collapse navbar-collapse" id="navbarSupportedContent">
   				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="index.html">Home</a>
+						<a class="nav-link" href="../index.html">Home</a>
 					</li>
 					<li class="nav-item active">
 						<a class="nav-link" href="product.html">Product<span class="sr-only">(current)</span></a>
