--- a/html/product/rock6.html
+++ b/html/product/rock6.html
@@ -19,14 +19,14 @@
 	</head>
 	<body>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="../index.html">Rock Stop</a>
+			<a class="navbar-brand" href="../../index.html">Rock Stop</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     			<span class="navbar-toggler-icon"></span>
   			</button>
   			<div class="collapse navbar-collapse" id="navbarSupportedContent">
   				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="../index.html">Home</a>
+						<a class="nav-link" href="../../index.html">Home</a>
 					</li>
 					<li class="nav-item active">
 						<a class="nav-link" href="../product.html">Product<span class="sr-only">(current)</span></a>
@@ -47,102 +47,143 @@
 				<li><strong>Description: </strong>This rock is so real that it doesn't even look real. It sure looks pretty though.</li>
 			</ul>
 		</div>
-		<form id="purchase-form">
+		<form action="mailto:?subject=Rock Stop Order Details" method="post" enctype="text/plain" id="purchase-form" class="needs-validation" novalidate>
 		  <h5>Order Details</h5>
 		  <div class="form-row">
 		    <div class="form-group col-md-3">
 		      <label for="inputItem">Item Number</label>
-		      <input type="text" class="form-control" id="inputItem" placeholder="Rock Number">
+		      <input type="number" pattern="^([1-9]|10)$" class="form-control" id="inputItem" name="Item Number" placeholder="Rock Number 1-10" required>
+		      <div class="invalid-feedback">
+		      	Please choose a number between 1-10
+		      </div>
 		    </div>	
 		    <div class="form-group col-md-3">
 		      <label for="inputNumberOfOrders">Number of Orders</label>
-		      <input type="text" class="form-control" id="inputNumberOfOrders">
+		      <input type="number" class="form-control" name="Number of Orders" id="inputNumberOfOrders" pattern="^[1-9]|[1-9][0-9]$" placeholder="1-99" required>
+		      <div class="invalid-feedback">
+				Please choose a number between 1-99
+		      </div>
 		    </div>			    	  	
 		  </div>		  
 		  <div class="form-row">
 		    <div class="form-group col-md-3">
 		      <label for="inputFirstName">First Name</label>
-		      <input type="text" class="form-control" id="inputFirstName" placeholder="Tyler">
+		      <input type="text" class="form-control" id="inputFirstName" name="First Name" pattern="^[a-zA-Z ,.'-]+$" required>
+		      <div class="invalid-feedback">
+				Valid characters are a-z A-Z ,.'-
+		      </div>
 		    </div>	
 		    <div class="form-group col-md-3">
 		      <label for="inputLastName">Last Name</label>
-		      <input type="text" class="form-control" id="inputLastName" placeholder="Vu">
+		      <input type="text" class="form-control" id="inputLastName" name="Last Name" pattern="^[a-zA-Z ,.'-]+$" required>
+		      <div class="invalid-feedback">
+				Valid characters are a-z A-Z ,.'-
+		      </div>		      
 		    </div>			    	  	
-		    <div class="form-group col-md-6">
+		    <div class="form-group col-md-3">
 		      <label for="inputEmail4">Email</label>
-		      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+		      <input type="email" class="form-control" id="inputEmail4" name="Email" placeholder="Email" required>
+		      <div class="invalid-feedback">
+		      	Please provide a valid email
+		      </div>
+		    </div>
+		    <div class="form-group col-md-3">
+				<label for="inputPhone">Phone Number</label>
+				<input type="tel" class="form-control" id="inputPhone" name="Phone Number" placeholder="XXX-XXX-XXXX" pattern="^\d{10}$" required>
+				<div class="invalid-feedback">
+					Please provide a valid phone number e.g XXXXXXXXXX
+				</div>
 		    </div>
 		  </div>
 		  <div class="form-group">
 		    <label for="inputAddress">Shipping Address</label>
-		    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+		    <input type="text" class="form-control" id="inputAddress" name="Shipping Address" placeholder="1234 Main St" required>
 		  </div>
 		  <div class="form-group">
 		    <label for="inputAddress2">Shipping Address 2</label>
-		    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+		    <input type="text" class="form-control" id="inputAddress2" name="Shipping Address 2" placeholder="Apartment, studio, or floor">
 		  </div>
 		  <div class="form-row">
 		    <div class="form-group col-md-6">
 		      <label for="inputCity">City</label>
-		      <input type="text" class="form-control" id="inputCity">
+		      <input type="text" class="form-control" id="inputCity" name="City" pattern="^[a-zA-Z  ']+$" required>
+		      <div class="invalid-feedback">
+				Valid characters are a-z A-Z
+		      </div>
 		    </div>
 		    <div class="form-group col-md-4">
 		      <label for="inputState">State</label>
-		      <select id="inputState" class="form-control">
-		        <option selected>Choose...</option>
+		      <select id="inputState" class="form-control" name="State" required>
 		        <option>California</option>
 		      </select>
 		    </div>
 		    <div class="form-group col-md-2">
 		      <label for="inputZip">Zip</label>
-		      <input type="text" class="form-control" id="inputZip">
+		      <input type="number" class="form-control" id="inputZip" name="Zip" pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/" required>
+		      <div class="invalid-feedback">
+				Please provide a valid Zip Code
+		      </div>
 		    </div>
 		  </div>
 		  <h5>Payment Method</h5>
 		  <div class="form-row">
 		    <div class="form-group col-md-4">
 		      <label for="inputCardName">Name on Card</label>
-		      <input type="text" class="form-control" id="inputCardName" placeholder="Tyler Vu">
+		      <input type="text" class="form-control" id="inputCardName" name="Name on Card" pattern="^[a-zA-Z ,.'-]+$" required>
+		      <div class="invalid-feedback">
+				Valid characters are a-z A-Z ,.'-
+		      </div>
 		    </div>		    	  	
-		    <div class="form-group col-md-6">
+		    <div class="form-group col-md-5">
 		      <label for="inputCardNumber">Card Number</label>
-		      <input type="text" class="form-control" id="inputCardNumber" placeholder="XXXX-XXXX-XXXX-XXXX">
+		      <input type="text" class="form-control" id="inputCardNumber" name="Card Number" placeholder="XXXXXXXXXXXXXXXX" pattern="^\d{16}$" required>
+		      <div class="invalid-feedback">
+				Please provide a valid card number e.g XXXXXXXXXXXXXXXX
+		      </div>
 		    </div>
-		    <div class="form-group col-md-1">
+		    <div class="form-group col-md-2">
 		      <label for="inputExpiration">Expiration Date</label>
-		      <input type="text" class="form-control" id="inputExpiration" placeholder="XX/XX">
+		      <input type="text" class="form-control" id="inputExpiration" name="Card Expiration" placeholder="XX/XX" pattern="^\d{2}/\d{2}$" required>
+		      <div class="invalid-feedback">
+				Please provide a valid date e.g XX/XX
+		      </div>
 		    </div>		
 		    <div class="form-group col-md-1">
 		      <label for="inputCSC">CSC</label>
-		      <input type="text" class="form-control" id="inputCSC" placeholder="XXX">
+		      <input type="number" class="form-control" id="inputCSC" name="Card CSC" placeholder="XXX" pattern="^\d{3}$" required>
+		      <div class="invalid-feedback">
+				Please provide a valid CSC e.g XXX
+		      </div>
 		    </div>		        
 		  </div>	
 		  <div class="form-group">
 		    <label for="inputBillingAddress">Billing Address</label>
-		    <input type="text" class="form-control" id="inputBillingAddress" placeholder="1234 Main St">
+		    <input type="text" class="form-control" id="inputBillingAddress" name="Billing Address" placeholder="1234 Main St" required>
 		  </div>
 		  <div class="form-group">
 		    <label for="inputBillingAddress2">Billing Address 2</label>
-		    <input type="text" class="form-control" id="inputBillingAddress2" placeholder="Apartment, studio, or floor">
+		    <input type="text" class="form-control" id="inputBillingAddress2" name="Billing Address 2" placeholder="Apartment, studio, or floor">
 		  </div>
 		  <div class="form-row">
 		    <div class="form-group col-md-6">
 		      <label for="inputBillingCity">City</label>
-		      <input type="text" class="form-control" id="inputBillingCity">
+		      <input type="text" class="form-control" id="inputBillingCity" name="Billing City" pattern="^[a-zA-Z ']+$" required>
 		    </div>
 		    <div class="form-group col-md-4">
 		      <label for="inputBillingState">State</label>
-		      <select id="inputBillingState" class="form-control">
-		        <option selected>Choose...</option>
+		      <select id="inputBillingState" class="form-control" name="Billing State" required>
 		        <option>California</option>
 		      </select>
 		    </div>
 		    <div class="form-group col-md-2">
 		      <label for="inputBillingZip">Zip</label>
-		      <input type="text" class="form-control" id="inputBillingZip">
+		      <input type="number" class="form-control" id="inputBillingZip" pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/" name="Billing Zip" required>
+		      <div class="invalid-feedback">
+				Please provide a valid Zip Code
+		      </div>
 		    </div>
 		  </div>		  	  	  
 		  <button type="submit" class="btn btn-primary">Place Order</button>
-		</form>		
+		</form>	
 	</body>
 </html>
