--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 		<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-		<script src="../js/scripts.js"></script>	
+		<script src="js/scripts.js"></script>	
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="../css/animate.css">    
-		<link rel="stylesheet" href="../css/hover.css">    	
-	    <link rel="stylesheet" href="../css/styles.css">
+		<link rel="stylesheet" href="css/animate.css">    
+		<link rel="stylesheet" href="css/hover.css">    	
+	    <link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -29,10 +29,10 @@
 						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="product.html">Product</a>
+						<a class="nav-link" href="html/product.html">Product</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="team.html">Team</a>
+						<a class="nav-link" href="html/team.html">Team</a>
 					</li>
   				</ul>
   			</div>
