--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="html/product.html">Product</a>
+						<a class="nav-link" href="html/productList.php">Product</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="html/team.html">Team</a>
@@ -39,7 +39,7 @@
 		</nav>
 		<div id="home-landing-image" class="parallax">
 			<div class="landing-content-container">
-				<a href="product.html"><button id="landing-button" type="button" class="btn btn-success">Check out our rocks</button></a>
+				<a href="html/productList.php"><button id="landing-button" type="button" class="btn btn-success">Check out our rocks</button></a>
 			</div>
 		</div>
 		<div id="home-divider-one" class="parallax-divider">
